--- a/.github/readme
+++ b/.github/readme
@@ -6,5 +6,5 @@
 #     project:
 #       default:
 #         threshold: 0.05%
-
+# validar o arquivo codecov.yml
 # curl -X POST --data-binary @codecov.yml https://codecov.io/validate
